Reviews section complete and more structure.
This was done yesterday, April 3.

Works on the product review front-end and spins off into separate view file.

Adds support for partials along with creation of file for sinatra code to fill up.

Signed-off-by: skinny_much <skinny_much@fastmail.fm>

--- a/assets/css/review_site.css
+++ b/assets/css/review_site.css
@@ -1,5 +1,9 @@
 .seperator {
   
+  clear: both;
+  text-align: center;
+  padding: 10px;
+  
 }
 
 h3 {
@@ -19,6 +23,32 @@ h3 {
 .stars {
   
   float: right;
+  
+}
+
+.rating {
+  color: #117f1d;
+  font-weight: bold;
+}
+
+.support {
+  
+}
+
+.recommendation {
+  
+  
+}
+
+.learn_more {
+
+  float: right;
+  
+}
+
+.review {
+  
+  margin-left: 20px;
   margin-right: 20px;
   
 }
