--- a/assets/css/review_site.css
+++ b/assets/css/review_site.css
@@ -31,15 +31,6 @@ h3 {
   font-weight: bold;
 }
 
-.support {
-  
-}
-
-.recommendation {
-  
-  
-}
-
 .learn_more {
 
   float: right;
@@ -50,5 +41,45 @@ h3 {
   
   margin-left: 20px;
   margin-right: 20px;
+  
+}
+
+#features {
+  
+  margin-left: 20px;
+  display: inline;
+  
+}
+
+#feature_list {
+  
+  margin-bottom: 10px;
+  
+}
+
+#top_product_image {
+  
+  float: right;
+  
+}
+
+.divider {
+  
+  height: 7px;
+  color: #ffffff;
+  background-color: #ffffff;
+  
+}
+
+.hero-unit {
+  
+  margin-bottom: 5px;
+  
+}
+
+#the_footer {
+  
+  float: right;
+  margin-right: 10px;
   
 }
