--- a/views/footer.erb
+++ b/views/footer.erb
@@ -1,3 +1,3 @@
 <footer>
-  <p>&copy; Sample Website Name | Sample Corp. 2010-2012. | About | Contact | Privacy Policy</p>
+  <p id="the_footer">&copy; Sample Website Name | Sample Corp. 2010-2012. | <a href="about">About</a> | <a href="contact-us">Contact</a> | <a href="privacy-policy">Privacy Policy</a></p>
 </footer>
